# alpha_img_auv

./: README.md
alpha_img_auv/: CMakeLists.txt  package.xml
alpha_img_bringup/: CMakeLists.txt  package.xml
alpha_img_bringup/launch/: bringup_helm.launch  bringup_localization.launch  bringup_mvp.launch  bringup_power_switch.launch  bringup_sensors.launch  bringup_sensors_jetson.launch  bringup_simulation.launch  bringup_test.launch  bringup_thrusters.launch  bringup_vehicle.launch  calibration_imu.launch  test_gps.launch  test_gpsd.launch  test_onboard_sensor.launch
alpha_img_bringup/launch/include/: blueprint_oculus_fls.launch.xml  bluerobotics_bar30.launch.xml  bluerobotics_ping360.launch.xml  control.launch.xml  description.launch.xml  dwe_fisheye_cam.launch.xml  gpio_manager.launch.xml  joystick.launch.xml  localization.launch.xml  localization_sim.launch.xml  madgwick_filter.launch.xml  microstrain.launch.xml  monitor.launch.xml  pi_pico.launch.xml  power_monitor.launch.xml  waterlinked_dvl.launch.xml  xsens_imu.launch.xml
alpha_img_config/: package.xml
alpha_img_config/config/: blueprint_oculus_fls.yaml  bluerobotcs_ping360.yaml  control.yaml  control_sim.yaml  gpio_manager.yaml  microstrain.yaml  navsat.yaml  pi_pico.yaml  pwm_driver.yaml  waterlinked_dvl.yaml  waterlinked_dvl_03719.yaml  xsens_imu.yaml
alpha_img_config/mission/config/: helm.yaml
alpha_img_config/mission/param/: direct_control_cont.yaml  teleop.yaml
alpha_img_description/: CMakeLists.txt  package.xml
alpha_img_description/launch/: description.launch
alpha_img_description/rqt/: default.perspective
alpha_img_description/rviz/: config.rviz
alpha_img_description/urdf/: base.urdf.xacro
