<?xml version="1.0"?>
<package format="2">
  <name>alpha_img_description</name>
  <version>0.0.0</version>
  <description>The alpha_img_description package</description>

  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="linzhao@uri.edu">Lin Zhao</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>


  <export>

  </export>

</package>
